# learnedspatialbucketindex

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
app/: bucket.cpp  rtree.cpp
headers/extlib/: groupby.h
headers/extlib/internal/: iterator_wrapper.h
headers/extlib/spatialindex/: MovingRegion.h
headers/learnedindex/: Bucket.h  BucketCreator.h  BucketIdx.h  GeoHash.h  GeoPoint.h  IBoundEstimationStrategy.h  LinearModel.h  Model.h  csv.h  keras_model.h  lg.h  query.h  rtreebulk.h  timer.h  utils.h
python/: .gitignore  gen.py  requirements.txt  trainmodel.py
python/src/: model.py
src/: GeoHash.cpp  QueryGenerator.cpp  keras_model.cpp  rTreeBulk.cpp  timer.cpp  utils.cpp
